<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{788d73b2-c2a2-47f5-ab0a-e80d75f6a820}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	StartButton	:	NormallyOpenPushButton;
	StopButton	:	NormallyClosedPushButton;
	EmergencyStopButton	:	NormallyClosedPushButton;
	ProductDetectedSensor	:	NormallyClosedSensor;
	ConveyorFullSensor	:	NormallyClosedSensor;
	MotorContactor	AT %Q*:	BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>